--- a/recipe/recipe.yaml
+++ b/recipe/recipe.yaml
@@ -44,6 +44,10 @@ requirements:
       then: libllvmspirv
     - if: build_platform != target_platform and osx
       then: spirv-tools
+    - if: build_platform != target_platform and osx
+      then: zlib
+    - if: build_platform != target_platform and osx
+      then: zstd
     - if: build_platform != target_platform
       then:
         - llvm
