try pinning bld 1

--- a/recipe/recipe.yaml
+++ b/recipe/recipe.yaml
@@ -36,6 +36,7 @@ requirements:
       then:
         - clangdev
         - libclc
+        - libcxx
         - llvm-spirv
         - llvm-tools
         - libllvmspirv
